# firecrawl

./: SELF_HOST.md
.github/workflows/: deploy-image.yml
apps/api/: Dockerfile  knip.config.ts  package.json
apps/api/native/src/: crawler.rs  html.rs
apps/api/scripts/: docker-entrypoint.sh  upload-sentry-sourcemaps.sh
apps/api/src/: config.ts  harness.ts  index.ts
apps/api/src/controllers/: auth.ts
apps/api/src/controllers/v0/: crawl-cancel.ts
apps/api/src/controllers/v1/: crawl-cancel.ts  search.ts  types.ts
apps/api/src/controllers/v2/: crawl-cancel.ts  map.ts  scrape.ts  search.ts  types.ts
apps/api/src/lib/: concurrency-limit.ts  crawl-redis.ts  gcs-jobs.ts  html-to-markdown-client.ts  html-to-markdown.ts  map-utils.ts
apps/api/src/lib/branding/: processor.ts  transformer.ts
apps/api/src/lib/extract/: extraction-service.ts
apps/api/src/routes/: shared.ts  v1.ts
apps/api/src/scraper/scrapeURL/: index.ts
apps/api/src/search/v2/: ddgsearch.ts
apps/api/src/services/: extract-worker.ts  fdb-queue-client.ts  index.ts  queue-jobs.ts  queue-worker.ts  rate-limiter.ts  redis.ts  sentry.ts
apps/api/src/services/__tests__/: rate-limiter-crawl-status.test.ts
apps/api/src/services/logging/: log_job.ts
apps/api/src/services/worker/: nuq-janitor-worker.ts  nuq-prefetch-worker.ts  nuq-worker.ts  nuq.ts  scrape-worker.ts
apps/fdb-queue-service/: Cargo.toml
apps/fdb-queue-service/src/: fdb.rs  handlers.rs  main.rs  models.rs
apps/js-sdk/firecrawl/src/v2/: types.ts
apps/python-sdk/firecrawl/v2/: types.py
apps/webhook-dispatcher/src/: main.rs
(+11 files in other folders)
