[package]
name = "fdb-queue-service"
version = "0.1.0"
edition = "2021"

[dependencies]
# Web framework
axum = { version = "0.7", features = ["macros"] }
tokio = { version = "1", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["trace", "cors"] }

# FoundationDB
foundationdb = { version = "0.10", features = ["embedded-fdb-include", "fdb-7_3"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Other
thiserror = "1"
uuid = { version = "1", features = ["v7", "serde"] }
rand = "0.8"
base64 = "0.22"
